Signed-off-by: MisakaLoveEcho <w2054771517@163.com>

--- a/example/Filter_Test/MDK-ARM/G474VET6Test/G474VET6Test.build_log.htm
+++ b/example/Filter_Test/MDK-ARM/G474VET6Test/G474VET6Test.build_log.htm
@@ -22,11 +22,16 @@ Dialog DLL:      TCM.DLL V1.56.4.0
  
 <h2>Project:</h2>
 C:\Users\w2054\Desktop\stm32_project\G474VET6\Electric-race-microcontroller-training\example\Filter_Test\MDK-ARM\G474VET6Test.uvprojx
-Project File Date:  10/15/2024
+Project File Date:  10/16/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.22', folder: 'D:\industrial software\keilv5\ARM\ARMCLANG\Bin'
 Build target 'G474VET6Test'
+compiling stm32g4xx_ll_rcc.c...
+assembling startup_stm32g474xx.s...
+linking...
+Program Size: Code=20004 RO-data=58220 RW-data=220 ZI-data=70764  
+FromELF: creating hex file...
 "G474VET6Test\G474VET6Test.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +56,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
