--- a/example/Filter_Test/MDK-ARM/G474VET6Test/G474VET6Test.build_log.htm
+++ b/example/Filter_Test/MDK-ARM/G474VET6Test/G474VET6Test.build_log.htm
@@ -27,12 +27,15 @@ Project File Date:  10/16/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.22', folder: 'D:\industrial software\keilv5\ARM\ARMCLANG\Bin'
 Build target 'G474VET6Test'
-compiling stm32g4xx_ll_rcc.c...
-assembling startup_stm32g474xx.s...
+../BSP/key.c(41): warning: non-void function does not return a value in all control paths [-Wreturn-type]
+   41 | }
+      | ^
+1 warning generated.
+compiling key.c...
 linking...
-Program Size: Code=20004 RO-data=58220 RW-data=220 ZI-data=70764  
+Program Size: Code=19912 RO-data=58312 RW-data=220 ZI-data=70764  
 FromELF: creating hex file...
-"G474VET6Test\G474VET6Test.axf" - 0 Error(s), 0 Warning(s).
+"G474VET6Test\G474VET6Test.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
